# py_base

./: .gitignore  README.md
.husky/: commit-msg  pre-commit
ai/train/: Dockerfile
deploy/docker/: build_docker_image.sh  deploy.sh  env_test.sh  init_db.sh  run.sh  stop.sh  sync.sh
deploy/docker/services/: cadvisor.yml  dcgm-exporter.yml  fe.yml  mysql.yml  network.yml  node-exporter.yml  prom.yml  redis.yml  web.yml  worker.yml
fe/: .eslintignore  .eslintrc.js  .prettierrc.js  .stylelintrc.js  Dockerfile  README.md  babel.config.js  components.d.ts  package.json  tsconfig.json  windi.config.ts
fe-react/: package.json
fe/config/: proxy.ts  vite.config.base.ts  vite.config.dev.ts
fe/src/: main.ts
fe/src/api/: dictionary.ts  interceptor.ts  message.ts  user.ts
fe/src/config/: readme.md  settings.json
fe/src/enums/: httpEnum.ts  user.ts
fe/src/hooks/: permission.ts
fe/src/layout/: default-layout.vue
fe/src/locale/: en-US.ts  zh-CN.ts
fe/src/mock/: user.ts
fe/src/types/: global.ts  router.d.ts
fe/src/utils/: is.ts
service/py/: .bandit  Dockerfile  Pipfile  README.md  pytest.ini
service/py/app/: exts.py  run.py
service/py/scripts/: createadmin.sh  dbupgrade.sh  development.sh  (+1 more)
service/rs/: .env  Cargo.toml  Readme.md
service/rs/entity/: Cargo.toml
service/rs/entity/src/: image_lib.rs  user.rs
service/rs/migrations/: 20220901110634_init.sql  20220904133647_add-role.sql  20220905025656_add-role-name.sql  20220905032654_rename-role-permissions.sql  20220905075334_user-add-role-id.sql
service/rs/sqls/user/: find_one.sql
service/rs/src/: config.rs  lib.rs  main.rs
service/rs/src/api/: error.rs  mod.rs  role.rs  route.rs  test.rs  user.rs
service/rs/src/api/core/: crud.rs  error.rs  mod.rs  resp.rs  schemas.rs
service/rs/src/api/files/: mod.rs
service/rs/src/api/user/: avatar.rs  jwt.rs  mod.rs  role.rs  route.rs  schemas.rs  user.rs
service/rs/src/api/util/: jwt.rs
service/rs/src/ctx/: mod.rs
service/rs/src/entity/: mod.rs  role.rs
service/rs/src/entity/core/: crud.rs  mod.rs
service/rs/src/entity/user/: mod.rs  role.rs  user.rs
service/rs/src/http/: error.rs  mod.rs  resp.rs  test.rs  user.rs
service/rs/src/http/models/: user.rs
service/rs/src/http/util/: encrypt.rs  jwt.rs
service/rs/src/models/: mod.rs  permission.rs  role.rs  user.rs
service/rs/src/models/user/: permission.rs  role.rs  user.rs
service/rs/src/sqls/user/: find_one.sql
(+80 files in other folders)
