[package]
name = "webace-http-base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
#members = [".", "entity", "migration"]
members = [".", "entity"]

[dependencies]
tokio = { version = "1.18.1", features = ["full"] }
axum = "0.5.15"
tower = "0.4.12"
tower-http = { version = "0.3.3", features = ["fs"] }
tower-cookies = "0.6.0"
anyhow = "1.0.57"
dotenv = "0.15.0"
serde = "1.0.137"
serde_json = "1.0.81"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
entity = { path = "entity" }
sea-orm = { version = "0.9.2", features = ["sqlx-mysql", "runtime-tokio-native-tls", "debug-print"] }
log = "0.4.17"
env_logger = "0.9.0"
clap = {version="3.2.18", features = ["derive"]}
thiserror = "1.0.32"
validator = "0.16.0"
jsonwebtoken = "8.1.1"
uuid = "1.1.2"
bcrypt = "0.13.0"
chrono = "0.4.22"
sqlx = {version="0.6.1", features=["mysql"]}
