[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.9.2", features = ["sqlx-mysql", "runtime-tokio-native-tls", "debug-print"] }
dotenv = "0.15.0"
serde = "1.0.137"
serde_json = "1.0.81"
